<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4CAF50"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progreso"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/pbarProgreso"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="5dip"
        android:max="100" />

    <Button
        android:id="@+id/btnSinHilos"
        android:layout_width="178dp"
        android:layout_height="69dp"
        android:text="@string/sin_hilos" />

    <Button
        android:id="@+id/btnHilo"
        android:layout_width="177dp"
        android:layout_height="70dp"
        android:text="@string/nuevo_hilo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnAsyncTask"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nuevo_asynctask" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="111dp"
            android:layout_height="70dp"
            android:text="@string/cancelar" />

    </LinearLayout>

    <Button
        android:id="@+id/btnAsyncDialog"
        android:layout_width="280dp"
        android:layout_height="81dp"
        android:text="@string/asynctask_dialog" />

</LinearLayout>
